--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -14,7 +14,8 @@
 	</div>
 	<div class="divClass">
 		<span id="spanId">Mi comida favorita es la pizza, un alimento fácil de cocinar y con un sabor muy rico</span>
-		<a href="https://kentucky.com.ar/"></a>
+		<br>
+		<a href="https://kentucky.com.ar/">Link a mi restaurante favorito</a>
 	</div>
 	<div id="thirdDiv">
 		<ul>
